--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <build.lib.path>${project.basedir}/libs</build.lib.path>
         <spark.version>2.4.3</spark.version>
         <spark.scope>provided</spark.scope>
+        <commons.httpclient.version>4.5.6</commons.httpclient.version>
         <skipTests>true</skipTests>
     </properties>
 
@@ -288,9 +289,9 @@
             <scope>${spark.scope}</scope>
         </dependency>
         <dependency>
-            <groupId>com.squareup.okhttp3</groupId>
-            <artifactId>okhttp</artifactId>
-            <version>4.0.1</version>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>${commons.httpclient.version}</version>
         </dependency>
     </dependencies>
 
